--- a/css/style.css
+++ b/css/style.css
@@ -10,7 +10,8 @@ body {
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: 16px;
 	line-height: 1.6;
-	background-color: #f9f9f9;
+	background: radial-gradient( circle at top center, #c3208f, #c3208f, #322671,#110230);
+	color: white;
 }
 
 h1,
@@ -50,13 +51,51 @@ hr {
 }
 
 /* Layout */
+.main {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100%;
+	padding: 30px;
+  }
 
 .container {
-	padding: 0;
-	margin: 0 auto;
-	width: 100%;
-	max-width: 1000px;
+  /* padding: 20px; */
+  border: 4px solid white;
+  text-align: center;
+  padding: 30px;
+  height: 100%;
 }
+
+.text-content {
+	font-style: italic;
+	font-size: 3.5rem;
+  }
+  
+  .text-content p {
+	margin: 10px 0;
+  }
+  .text-content .author{
+	font-size: 1.5rem;
+  }
+  
+  .span1{
+	font-size: 6rem;
+	font-weight: bold;
+	color: white;
+	display: flex;
+	justify-content: flex-start;
+  }
+  .span2{
+	font-size: 6rem;
+	font-weight: bold;
+	color: white;
+	display: flex;
+	justify-content: flex-end;
+  }
+  
+
 
 /* Media Queries */
 
